deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ms-productos-backend-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: ms-productos-backend
  template:
    metadata:
      labels:
        app: ms-productos-backend
    spec:
      containers:
        - name: ms-productos-backend-container
          image: anthonyponte/ms-productos-backend:v1
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "200m"
              memory: "256Mi"
          ports:
            - containerPort: 9095
          volumeMounts:
            - name: h2-storage
              mountPath: /h2-data
      volumes:
        - name: h2-storage
          persistentVolumeClaim:
            claimName: h2-pvc
