h2-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: h2-server
spec:
  selector:
    app: h2-server
  ports:
    - name: jdbc
      port: 1521
      targetPort: 1521
    - name: web
      port: 81
      targetPort: 81
