service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ms-productos-backend-service
spec:
  selector:
    app: ms-productos-backend
  ports:
    - protocol: TCP
      port: 9095
      targetPort: 9095
