ms-productos-backend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ms-productos-backend-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: "anthonyponte.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ms-productos-backend
            port:
              number: 9095
